# cadence

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: board.py  meeting.py
backend/app/core/: config.py
backend/app/models/: actions.py  board.py  messages.py  transcript.py
backend/app/pm/: base.py  memory.py  seed.py
backend/app/services/: assemblyai.py  llm.py  meeting_session.py  transcript_buffer.py
backend/evals/: eval_actions.py  eval_e2e.py  generate_audio.py  runner.py  scoring.py
backend/evals/scenarios/: __init__.py  blockers.py  mixed.py  new_tickets.py  no_actions.py  reassignment.py  simple_updates.py
macos/: Package.swift
macos/Sources/Cadence/: AudioCapture.swift  AudioSource.swift  BoardView.swift  CadenceApp.swift  FixtureAudioPlayer.swift  Info.plist  MeetingViewModel.swift  Models.swift  PopoverView.swift  Theme.swift  WebSocketClient.swift
